# mcpacket

./: .gitmodules  README.md  meson.build
include/mcp/: buffer.h  codec.h  connection.h  handler.h  io.h  misc.h  nbt.h  packet.h  stream.h  type.h  types.h  varnum.h
include/mcp/io/: buffer.h  stream.h
include/mcp/lib/: miniz.h
mcd2packet/: mcd2packet.py
src/: buffer.c  codec.c  connection.c  handler.c  misc.c  nbt.c  types.c  varnum.c
src/io/: buffer.c  stream.c
src/lib/: miniz.c
